# SFO-JKT

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.md  FlightLeg.ps1  FlightTools.psd1  FlightTools.psm1  GITHUB_SETUP.md  GIT_COMMANDS.md  LICENSE  PRODUCTION_READY.md  PUSH_CHECKLIST.md  PYTHON_PACKAGE.md  PythonSFO.slnx  QUICKSTART.md  QUICK_REFERENCE.txt  QUICK_REFERENCE_CARD.txt  README-PowerShell.md  README.id.md  README.md  RESTRUCTURE_GUIDE.md  SETUP.md  START_HERE.md  SUCCESS.md  TASK_RUNNER.md  WHATS_NEXT.md  flight-map.ps1  flight-tracker-all.ps1  flight-tracker-timed.ps1  flight-tracker-utc.ps1  flight-tracker-with-delays.ps1  flight-tracker.ps1  flight_tracker.py  pyproject.toml  requirements.txt  test-all.ps1  utc-converter.ps1  windows-terminal-theme.json
.github/workflows/: test.yml
PythonSFO/: PythonSFO.pyproj
