[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfo-jkt-tracker"
version = "1.0.0"
description = "Flight tracking tool for SFO-Jakarta route via Tokyo with timezone conversions"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["flight", "tracker", "timezone", "travel", "aviation", "itinerary"]
authors = [
  {name = "Terrence J McLaughlin", email = "tmclaughlin1476@gmail.com"}
]
maintainers = [
  {name = "Terrence J McLaughlin", email = "tmclaughlin1476@gmail.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Office/Business :: Scheduling",
  "Topic :: Utilities",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

dependencies = [
  "pytz>=2023.3",
  "python-dateutil>=2.8.2",
  "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "flake8>=6.0",
  "black>=23.0",
]

[project.urls]
Homepage = "https://github.com/tjpools/SFO-JKT"
Documentation = "https://github.com/tjpools/SFO-JKT#readme"
Repository = "https://github.com/tjpools/SFO-JKT"
Issues = "https://github.com/tjpools/SFO-JKT/issues"
Changelog = "https://github.com/tjpools/SFO-JKT/blob/main/CHANGELOG.md"

[project.scripts]
flight-tracker = "flight_tracker:main"
sfo-jkt = "flight_tracker:main"

[tool.setuptools]
py-modules = ["flight_tracker"]

[tool.setuptools.packages.find]
where = ["."]
include = ["flight_tracker*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
